--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@ time_is_widget.init({Moscow_z71d:{}});
 
 <div class="nuipogoda-html-informer"><div>Погода <span data-nuipogoda="in-city"></span></div><div>Сейчас: <span data-nuipogoda="temp"></span></div><div data-nuipogoda="day1">Завтра: <span data-nuipogoda="temp"></span></div><a title="НУ И ПОГОДА" href="https://msk.nuipogoda.ru"></a></div><script>(function(a,f,g){var e=a.createElement(f);e.async=1;e.src=g; a=a.getElementsByTagName(f)[0];a.parentNode.insertBefore(e,a)})(document,'script','//nuipogoda.ru/informer/nuipogoda.js');</script>
 
+
+<style>
+	.nuipogoda-html-informer {
+	
+		font-size:15px;
+
+}
+	</style>
 <div id="tv" class="info"><a href="https://web.archive.org/web/20090701221602/http://tv.yandex.ru/">Телепрограмма</a><ul><li><em>10:00</em> <a href="https://web.archive.org/web/20090701221602/http://tv.yandex.ru/broadcast.xml?id=17327451">Мультики</a> <span class="channel">3х3</span></li><li><em>19:40</em> <a href="https://web.archive.org/web/20090701221602/http://tv.yandex.ru/broadcast.xml?id=17316405">В джазе только девушки</a> <span class="channel">3х3</span></li><li><em>22:07</em> <a href="https://web.archive.org/web/20090701221602/http://tv.yandex.ru/broadcast.xml?id=17327452" title="Ленин гриб">Ленин гриб</a> <span class="channel">3х3</span></li></ul></div></div></td></tr></tbody></table><div id="foot"><table><tbody><tr><td class="g"><i></i></td><td class="d">Дизайн&nbsp;— <a href="https://web.archive.org/web/20090701221602/http://www.artlebedev.ru/">Студия Артемия&nbsp;Лебедева</a></td><td class="c"><a class="kbd" href="https://web.archive.org/web/20090701221602/http://www.yandex.ru/index_engl_qwerty.html">Русская клавиатура</a> &nbsp; &nbsp;<a class="mob" href="https://web.archive.org/web/20090701221602/http://mobile.yandex.ru/">Мобильная версия</a></td><td class="r"><a href="https://web.archive.org/web/20090701221602/http://company.yandex.ru/">О компании</a>&nbsp;· <a href="https://web.archive.org/web/20090701221602/http://company.yandex.com/">About</a>&nbsp;· <a href="https://web.archive.org/web/20090701221602/http://advertising.yandex.ru/">Реклама</a>&nbsp;· <a href="https://web.archive.org/web/20090701221602/http://help.yandex.ru/">Помощь</a> &nbsp;&nbsp;&nbsp;<span>©&nbsp;2023</span> «Ядекс»</td><td class="g"><i></i></td></tr></tbody></table></div><!--u16.wfront.yandex.net--><img src="index_files/IZ_srwI0xg040WW0Zh82lgG4KP6yq4ba1fDKVm40=pX70UPK2cm9jL9Abk6a6Um4" alt="" width="1" height="1"><div id="bannerJS"><div><img src="index_files/IZ_sr-FHE-040WW2Zh82lgG4KPK2cm9jL2A8ghiz0PAbk6a6YgAsnmEHlD19P0QJ" alt="" width="1" height="1"></div></div><script type="text/javascript">_addScript('https://web.archive.org/web/20090701221602/https://passport.yandex.ru/js/smarthttps.js');_addScript('https://web.archive.org/web/20090701221602/http://js.static.yandex.net/jquery/1.3.2/_jquery.js');</script><!--
      FILE ARCHIVED ON 22:16:02 Jul 01, 2009 AND RETRIEVED FROM THE
      INTERNET ARCHIVE ON 18:28:11 May 29, 2023.
