--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ time_is_widget.init({Moscow_z71d:{}});
 
 <p></p>
 
-	<div id=tv class="info"><div>Погода <span data-nuipogoda="in-city"></span></div><div>Сейчас: <span data-nuipogoda="temp"></span></div><div data-nuipogoda="day1">Завтра: <span data-nuipogoda="temp"></span></div><a title="НУ И ПОГОДА" href="https://msk.nuipogoda.ru"></a></div><script>(function(a,f,g){var e=a.createElement(f);e.async=1;e.src=g; a=a.getElementsByTagName(f)[0];a.parentNode.insertBefore(e,a)})(document,'script','//nuipogoda.ru/informer/nuipogoda.js');</script>
+	<div id="tv" class="info"><div>Погода <span data-nuipogoda="in-city"></span></div><div>Сейчас: <span data-nuipogoda="temp"></span></div><div data-nuipogoda="day1">Завтра: <span data-nuipogoda="temp"></span></div><a title="НУ И ПОГОДА" href="https://msk.nuipogoda.ru"></a></div><script>(function(a,f,g){var e=a.createElement(f);e.async=1;e.src=g; a=a.getElementsByTagName(f)[0];a.parentNode.insertBefore(e,a)})(document,'script','//nuipogoda.ru/informer/nuipogoda.js');</script>
 
 <style>
 	.nuipogoda-html-informer {font-size:15px;}
